assets/css/style.css
/* ... */
.navbar-toggler-icon {
    border: 2px solid rgba(0, 0, 0, 0.1);
    height: auto;
}

.navbar-toggler .fa {
    font-size: 7.5vh;
}

.toggler-logo {
    height: 10vh;
    padding: 3px;
}

.logo {
   width: 11vw;
   height: auto;
   min-height:60px;
   max-height: 17vh;
   display: none;
   border: none;
}

.logo:hover{
    border: none;
}

#hero-quote-text{
    display: none;
    font-style: italic;
    font-family: 'Neucha', cursive;
    background-color: #ebe9e9;
}

/*---- Trips.html header-----*/

.header-container {
    background-color: rgb(221, 221, 221);
    width:100%;
}


/*--------------Main Content ------------------------------------------------------------*/

#home-container{
    display: flex;
    flex-direction: column;
    width: 100%;
}

#home-first-section, #home-second-section , #home-third-section  {
    background-color: #ebe9e9;   
    flex:1;
    text-align: center;
    padding: 0px 20px 15px 20px;
}

#home-second-section {
    background-color: #d4d4d4; 
}

#home-container h1 {
    padding-top: 20px;
    font-size: 20px;
    height: 70px;
}

#home-container p {
    font-size: 18px;
}

#home-container li {
    font-size: 19px;
    padding: 6px;
    border-bottom: 1px solid rgba(97,97,97, 0.4);
    list-style-type: none;
}

#home-container ul {
    padding: 0;
}

.home-icons{
    font-size: 50px;
    padding: 40px 0px;
    color: rgb(60, 140, 178);
}

#destinations{
    position: relative;
    height: 20vh;
    background-color: #ebe9e9;
}

#call-to-action{
    position:absolute;
    top: 40%;
    left: 50%;
    transform: translateX(-50%); /* Stack Overflow */
}

#home-button{
    background-color: #35a5da;
    border: 1.5px solid #4a4a4a;
    font-size: 4vw;
}

/*----- trips.html Main Content -------*/

#cards{
    padding-top: 15px;
    padding-bottom: 30px;
    background-color:#ebe9e9;
}

#cards .container {
    padding-top: 15px;
    
}

.card{
    border: 4px solid rgb(226, 226, 226);
    width: 80vw;
    margin-left: auto;
    margin-right:auto;
}

#cards-heading{
    text-align: center;
    height: 10vh;
}

#cards-heading h1{
    color: rgb(43, 43, 43);
    line-height: 10vh;
    font-size: 6vw;
}

#cards hr {
    border-top: 2.5px solid rgba(0, 0, 0, 0.1);
}

#ethiopia, #india, #mongolia, #mauritania {
    border: 2px solid rgb(116, 116, 116);
     background-size: cover;
    width: 100%;
    height: auto;
    min-height: 40vh;
}
#ethiopia, #india,#mongolia,#mauritania{
    background-color: #ebe9e9;
}

.background-india{
    background-image: url("https://i.imgur.com/FFAQZpj.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    width:auto;
}

.background-ethiopia{
    background-image: url("https://i.imgur.com/hDjXYzp.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    width:auto;
}

.background-mongolia{
    background-image: url("https://i.imgur.com/5okVH5v.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    width:auto;
}

.background-mauritania{
    background-image: url("https://i.imgur.com/FVuBrQ3.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    width:auto;
}

#trips-section h1 {
    font-size: 18px;
    color: black;
}

#trips-section p {
    font-size: 13px;
    color: black;
    margin-bottom: 0px;
    padding-bottom: 1rem;
}

#content-eth, #content-ind, #content-mong, #content-maur {
    background-color: rgba(255, 255, 255, 0.8);
    padding: 10px 20px 0px 20px;
    text-align: center;
    width: auto;
    height: auto;
    left: 0;
    top: 0;
}


.down-arrow{
    position: relative;
    font-size: 75px;
    height: 100%;
    width: auto;
}
.down-arrow a{
    position: absolute;
    bottom:0;
    left:50%;
    transform: translateX(-50%); /* Source: Stack Overflow */
}

.down-arrow .fa, #up-arrow .fa {
    color: rgb(95, 169, 204);
    background-color: rgba(255, 255, 255, 0.2);
    display: none;
    text-decoration: none;
}

#up-arrow{
    position:static;
    display: flex;
    justify-content: center;
    font-size: 75px;
}

/*------- gallery.html main content -------*/

#gallery-section{
    background-color:#ebe9e9;
    width: 100%;
}
#gallery-title{
    height: 12vh;
    width: 100%;
    text-align: center;
    background-color: #ebe9e9;
}

#gallery-title h1{
    font-size: 5vw;
    margin-top: 0px; /* Override bootstrap default margin*/
    margin-bottom: 0px;
    padding-top: 2.7vh;
    line-height: 1.3;
    color: rgb(43, 43, 43);
}

.image-container{
    display: block;
    width: 40em;
    height: auto;
    position: relative;
    padding-right: 15px;
    padding-left: 15px;
}

.gallery-image {
    width: 99.5%;
    margin-top: 15px;
    margin-bottom: 15px;
    border: 2px solid #ebe9e9;
}
/*Image captions*/
.image-container p{
    visibility: hidden;
    position: absolute;
    display: inline;
    bottom: 5%;
    left: 5%;
    background-color: rgba(255, 255, 255, 0.541);
    width: 90%;
    height: auto;
    text-align: center;
    margin: 0px 0px 2px 0px;
    font-size: 22px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.image-container:hover p{
    visibility: visible;
}

/*------- contact.html main content ------*/

#form-section{
    background-color: rgb(95, 169, 204);
}
.form-container{
    background-color: #ebe9e9;
    margin-top: 3rem;
    margin-bottom: 3rem;
    padding: 20px;
}

.form-container h1{
    text-align: center;
}

.review-container{
    display:flex;
    flex-direction: row;
}

.review-one{
    background-color: #ebe9e9; 
    width:100%;
    height: auto;
    overflow: hidden;
}
.customer {
    margin-top: 20px;
}

.customer-img {
    display:block;
    width: 23vw;
    margin-left: auto;
    margin-right: auto;
    border-radius: 150px;
    border: 3px solid #fafafa;
}

.customer-name {
    text-align: center;
    font-size: 28px;
    margin-left: auto;
    margin-right: auto;
}
/* ... */

